@@ -68,14 +68,11 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                         'upload_to_gist': {name: 'to Gist',
                             callback: function(key, opt){
                                 var lCurrent    = DOM.getCurrentFile(), 
-                                    lA          = DOM.getCurrentLink(lCurrent).href,
+                                    lPath       = DOM.getCurrentPath(),
                                     lName       = DOM.getCurrentName(lCurrent);
-                                /* убираем адрес хоста*/
-                                lA = Util.removeStr(lA, cloudcmd.HOST);
-                                lA = Util.removeStr(lA, CloudFunc.NOJS);
-                                
+                                    
                                 DOM.ajax({
-                                    url     : lA,
+                                    url     : lPath,
                                     error   : DOM.Images.showError,
                                     success : function(data, textStatus, jqXHR){
                                         if( Util.isObject(data) )
